# codeowners-zed

./: .gitignore  Cargo.toml  README.md  extension.toml
examples/: CODEOWNERS
grammars/codeowners/: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
grammars/codeowners/bindings/c/: tree-sitter-codeowners.h  tree-sitter-codeowners.pc.in
grammars/codeowners/bindings/go/: binding.go  binding_test.go  go.mod
grammars/codeowners/bindings/node/: binding.cc
grammars/codeowners/bindings/python/tree_sitter_codeowners/: __init__.py  binding.c
grammars/codeowners/bindings/rust/: build.rs  lib.rs
grammars/codeowners/src/: grammar.json  node-types.json  parser.c
languages/codeowners/: config.toml  highlights.scm
src/: lib.rs
