[package]
name = "tree-sitter-codeowners"
description = "CODEOWNERS grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "codeowners"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/lukasmalkmus/tree-sitter-codeowners"
edition = "2021"
license = "MIT"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
